--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,47 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
   font-size: 10px;
+  }
+
+  body {
+    display: block;
+    margin: 8px;
+  }
+
+  container {
+  margin: 20px auto;
+  width: 90%;
+}
+
+div {
+  background-color: #dadada;
+  float: left;
+  margin: 1% 0;
+  width: 100%;
+  padding: 20px 25px;
+}
+
+/* two-column design */
+  @media screen and (min-width: 575px){
+     div {
+      margin: 1%;
+      width: 48%;
+    }
+  }
+
+/* four-column design */
+    @media screen and (min-width: 1199px){
+     div {
+      margin: 1%;
+      width: 23%;
+    }
+  }
+
+  h1 {
+font-size: 2.5em;
+margin: 0;
 }
