--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,36 @@
 body {
   background-color: #dadada;
   font-size: 10px;
-  }
+}
 
-  body {
-    display: block;
-    margin: 8px;
-  }
+body {
+  display: block;
+  margin: 8px;
+}
 
-  container {
+.container {
   margin: 20px auto;
   width: 90%;
+}
+
+.baku {
+  background-image: url(../images/baku.jpg);
+}
+.london {
+  background-image: url(../images/london.png);
+}
+.madrid {
+  background-image: url(../images/madrid.jpg);
+}
+.rome {
+  background-image: url(../images/rome.jpg);
+}
+
+.preview {
+  height: 250px;
+  width: 275px;
+  background-size: cover;
+  margin: 1%;
 }
 
 div {
@@ -25,23 +45,43 @@ div {
   padding: 20px 25px;
 }
 
-/* two-column design */
-  @media screen and (min-width: 575px){
-     div {
-      margin: 1%;
-      width: 48%;
-    }
+@media screen (min-width: 575px) {
+  .container {
+    width: 75%;
+    margin: 0 auto;
+  }
+  .preview {
+    float: right;
+    height: 250px;
+    margin: 1% 1%;
+    width: 48%;
+  }
+}
+
+@media screen and (min-width: 991px){
+  .container {
+    width: 65%;
   }
 
-/* four-column design */
-    @media screen and (min-width: 1199px){
-     div {
-      margin: 1%;
-      width: 23%;
-    }
+  .preview {
+    background-size: cover;
+    float: left;
+    height: 250px;
+    margin: 2em 1%;
+    width: 23%;
   }
+}
 
-  h1 {
-font-size: 2.5em;
-margin: 0;
+h2 {
+  font-family: Open-Sans, sans-serif;
+  font-size: 2.0em;
+  margin: 0;
+  padding-bottom: 30px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-family: serif;
+  font-size: 2.5em;
 }
